--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
 
 @tailwind base;
@@ -6,10 +7,11 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-      @apply font-poppins;
-    }
-    h2 {
-      @apply font-poppins text-xl font-semibold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white;
-    }
+  body {
+    @apply font-poppins;
   }
+
+  h2 {
+    @apply text-xl;
+  }
+}
